--- a/android-developer.html
+++ b/android-developer.html
@@ -96,7 +96,7 @@ Remote Senior Android Developer at camlCase | Android jobs | 42jobs.io
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/android/jobs/8406-android-developer'>
+<h5><a href='https://www.42jobs.io/android/jobs/8406-android-developer'>
 Android Developer at Dyson in Wiltshire | Android jobs | 42jobs.io
 
 </a></h5> 
@@ -127,13 +127,13 @@ Android Developer at Dyson in Wiltshire | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://growara.recruitee.com/o/android-developer'>
+<h5><a href='https://growara.recruitee.com/o/android-developer'>
       Android Developer - Growara
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/commencis/d7fe92a6-ffa5-428a-a70b-50532b7b018f'>Commencis - Senior Android Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/commencis/d7fe92a6-ffa5-428a-a70b-50532b7b018f'>Commencis - Senior Android Developer</a></h5> 
 <p><span class="badge badge-light">Istanbul</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -246,7 +246,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light">Manchester, United Kingdom</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://autotrader.avature.net/careers/JobDetail/Manchester-United-Kingdom-Principal-Android-Developer/704'>Principal Android Developer - Career Portal</a></h5> 
+<h5><a href='https://autotrader.avature.net/careers/JobDetail/Manchester-United-Kingdom-Principal-Android-Developer/704'>Principal Android Developer - Career Portal</a></h5> 
 <p><span class="badge badge-light">Manchester, United Kingdom</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -278,13 +278,13 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://syone2.recruitee.com/o/ref-6672019-android-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syone2.recruitee.com/o/ref-6672019-android-developer'>
       (Ref. 667/2019) Android Developer - Syone
     </a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/carfax/job/oqWlbfwC'>CARFAX Careers - Android Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/carfax/job/oqWlbfwC'>CARFAX Careers - Android Developer</a></h5> 
 <p><span class="badge badge-light">Canada London</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -434,7 +434,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TrophyRoomPteLtd/743999697018270-senior-android-developer'>TrophyRoom Pte Ltd Senior Android Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TrophyRoomPteLtd/743999697018270-senior-android-developer'>TrophyRoom Pte Ltd Senior Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
